--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,11 +3,11 @@
   }
   
   body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    font-family: -apple-system, Arial, Helvetica, sans-serif, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
       Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #fafafa;
+    background-color: url("https://webmail.scarlet.be/resources/img/body_grain.gif") #f14035;
     color: #212121;
     line-height: 1.5;
     margin: auto;
@@ -30,7 +30,8 @@ a {
 
 .search-form{
     display: flex;
-    padding: 26px 0px 18px 0px;
+    background-color: #f14035;
+    padding: 33px 5px 22px 3px;
     align-items: center;
     justify-content: center;
     text-align: center;
